# tantivy-cli

./: .gitignore  .travis.yml  AUTHORS  Cargo.toml  Dockerfile  README.md  appveyor.yml  build-static-binary.sh  integration_plan.org
.cargo/: config
ci/: before_deploy.ps1  before_deploy.sh
src/: main.rs  timer.rs
src/commands/: bench.rs  index.rs  infer_schema.rs  inspect.rs  merge.rs  mod.rs  new.rs  search.rs  serve.rs
static/: index.html  style.less
