[package]
name = "tantivy-cli"
version = "0.24.0"
authors = ["Paul Masurel <paul.masurel@gmail.com>"]

description = """Command line interface for Tantivy, a search engine library."""
documentation = "https://github.com/quickwit-inc/tantivy-cli"
homepage = "https://github.com/quickwit-inc/tantivy-cli"
repository = "https://github.com/quickwit-inc/tantivy-cli"

readme = "README.md"
keywords = ["search", "information", "retrieval"]
license = "MIT"
edition = "2021"

[dependencies]
time = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
clap = "4"
ansi_term = "0.12"
log = "0.4"
env_logger = "0.10"
tantivy = "0.24.2"
crossbeam-channel = "0.5.8"

[[bin]]
name = "tantivy"
path = "src/main.rs"


[profile.release]
opt-level = 3
debug = true
debug-assertions = false
